WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103934
Handle error recovery in @supports
https://bugs.webkit.org/show_bug.cgi?id=103934
Summary
Handle error recovery in @supports
Pablo Flouret
Reported
2012-12-03 15:04:24 PST
Tests 021, 024, 031, and 033 in
http://hg.csswg.org/test/file/5f94e4b03ed9/contributors/opera/submitted/css3-conditional
fail because there's no explicit error recovery in @support's grammar. Opera and Firefox pass the tests.
Attachments
Patch
(5.16 KB, patch)
2012-12-03 15:23 PST
,
Pablo Flouret
no flags
Details
Formatted Diff
Diff
Patch
(9.32 KB, patch)
2013-01-22 13:26 PST
,
Pablo Flouret
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pablo Flouret
Comment 1
2012-12-03 15:23:03 PST
Created
attachment 177349
[details]
Patch
Pablo Flouret
Comment 2
2013-01-22 13:26:42 PST
Created
attachment 184040
[details]
Patch
WebKit Review Bot
Comment 3
2013-02-12 10:42:27 PST
Comment on
attachment 184040
[details]
Patch Clearing flags on attachment: 184040 Committed
r142640
: <
http://trac.webkit.org/changeset/142640
>
WebKit Review Bot
Comment 4
2013-02-12 10:42:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug